--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t udagram-api-user .
-  - docker tag udagram-api-user "$DOCKER_USERNAME"/udagram-api-user:latest
+  - docker build -t udagram-api-users .
+  - docker tag udagram-api-user "$DOCKER_USERNAME"/udagram-api-users:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push "$DOCKER_USERNAME"/udagram-api-user
+  - docker push "$DOCKER_USERNAME"/udagram-api-users
