--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
 script:
   - docker --version # print the version for logging
   - docker build -t udagram-api-users .
-  - docker tag udagram-api-user "$DOCKER_USERNAME"/udagram-api-users:latest
+  - docker tag udagram-api-users "$DOCKER_USERNAME"/udagram-api-users:latest
 
 # Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
